--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mesto</title>
-    <link rel="stylesheet" href="style.4f573e9f9bb2fc9f2f09.css?b3ee2bb594addaafc794">
+    <link rel="stylesheet" href="style.css?d369f233fcecd26e72d8">
 </head>
 <body>
 <div class="root">
@@ -85,6 +85,6 @@
     </div>
 
 </div>
-<script type="module" src="main.d0a5d7033e57ef49e9dc.js?b3ee2bb594addaafc794"></script>
+<script type="module" src="main.d0a5d7033e57ef49e9dc.js?d369f233fcecd26e72d8"></script>
 </body>
 </html>
